SLING-4656 Fix ProviderHandler.compareTo
* Document natural order of ProviderHandler to be the 
  same as service.ranking order. which is the revers of
  the natural ServiceReference order previously
  implemented
* Added test case by Carsten Ziegeler (thanks)

git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/bundles/resourceresolver@1675805 13f79535-47bb-0310-9956-ffa450edef68